creusot/tests/should_fail/prusti/deref/expired_call.stderr
error[creusot]: `&'post u32` cannot be returned in `'a` since it doesn't live long enough
                `'post` doesn't outlive `'a`
 --> expired_call.rs:4:21
  |
4 | #[after_expiry('a, *move_state(old(x)) == 0u32)]
  |                     ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

